# An-autonomous-AI-agent-for-system-administration

./: .env  .gitignore  ChatOps.spec  README.md  build.py  docker-compose.yml  ip.txt  main.py  my_ip.txt  paths.py  pyproject.toml  setup_auth.py  uac_test_log.txt  verify_parser.py  ztest.py
auth/: __init__.py  auth_manager.py  auth_service.py  database.py  models.py  seed.py  session_manager.py
cli/: Readme.txt  checkOS.py  cli_functions.py  commons.py  date_time.py  filesharing.py  filesystem.py  firewallandsecurity.py  main.py  networking.py  reasoning_ui.py  request_admin_access.py  resource_monitoring.py  resourse_monitoring.py  setup.py  take_admin_access.py  ui_theme.py
config/: models.yaml  param.yaml  role_limits.py
core/: tool_parser.py  tool_router_ui.py
database/: vector_db.py
main/: main.txt
memory/: admin-session-1.json
notebooks/: test.ipynb
prompts/file_system/: file_system.py
prompts/router_agent/: router_agent.py
qdrant_storage/: raft_state.json
savidya/savidya/savidya/: name.txt
schema/: routing_schema.py
src/agents/: __init__.py  agents_client.py  graph.py  permission_check.py  router_agent.py  state.py  supervisor.py
src/agents/edges/: __init__.py
src/agents/nodes/: __init__.py  admin_node.py  cmd_node.py  filesystem_node.py  firewall_node.py  helpers.py  knowledge_node.py  monitoring_node.py  network_node.py  servers_node.py  system_node.py  users_node.py
src/agents/tools/: filesystem.py  filesystem_delete.py  firewallandsecurity.py  firewallmanagement.py  network.py  network_fix.py  servers.py  systemmanagement.py  usagemonitoring.py  usermanagement.py
src/infrastructure/: __init__.py  config.py
src/utils/: admin_utils.py  execution_log.py  memory_store.py
tests/: 00_llm_client.ipynb
tools/: datetime.py  filesharing.py  filesystem.py  filesystem_delete.py  firewall.py  firewallandsecurity.py  hardwaremonitoring.py  network.py  power.py  security.py  systemperformance.py  systemupdates.py  usagemonitoring.py  usermanagement.py
utils/: agents_client.py  delete_state.py  llm_client.py  memory_store.py  router_agent.py  routing_schema.py  token_utils.py
(+58 files in other folders)
