[project]
name = "chatops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.57.0",
    "langchain>=1.2.3",
    "langchain-google-genai>=4.2.0",
    "langchain-groq",
    "openai>=2.14.0",
    "pyfiglet>=1.0.4",
    "rich>=14.2.0",
    "tiktoken>=0.12.0",
    "uuid6>=2025.0.1",
    "langchain-groq",
    "psutil>=7.2.1",
    "paramiko>=4.0.0",
    "qdrant-client>=1.16.2",
    "uuid>=1.30",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.6",
]
